# adventofcode2022

./: .gitignore  Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
src/: util.rs
